# task-arena

./: README.md  function_wrapper.h  join_threads.h  pool.h  printer.h  safe_queue.h  stealing_queue.h
examples/: CMakeLists.txt  main.cpp
